# mz-800-emulator

./: .fips-imports.cmake  .fips-settings.yml  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  fips.yml
emulator/: CMakeLists.txt  gdg_whid65040_032.h  mz800.c  mz800.h  mzf.h
emulator/XCTests/: GDGTests.m  MZFile.m
emulator/XCTests/assets/: MZ800CharacterROM.inc  MZ800Graphics.inc  MZ800Memory.inc  TestBorder.asm  TestCharacters.asm  TestCharacters.mzf  TestFrameB.asm  TestHalt.asm  TestMZ700VRAM.asm  WriteCharacter.asm  WriteCharacter.mzf
emulator/common/: gfx.h
emulator/mz800/: CMakeLists.txt  gdg_whid65040_032.h  mz800-ui-impl.cc  mz800-ui-impl.cpp  mz800.c  mz800.h  mzf.h  ui_gdg_whid65040_032.h  ui_mz800.h
emulator/mz800/XCTests/: GDGTests.m  MZFTests.m  MZFile.h  MZFile.m
emulator/mz800/XCTests/assets/: MZ800.inc  MZ800Graphics.inc  TestBorder.asm  TestBorder.mzf  TestCharacters.asm  TestFrameB.asm  TestHalt.mzf  TestMZ700Color.asm  TestMZ700Color.mzf  TestMZ700VRAM.asm  TestMZ700VRAM.mzf  TestMZ700Write.asm  TestMZ700Write.mzf
emulator/roms/: CMakeLists.txt  mz800-roms.c  mz800-roms.h  mz800-roms.yml
emulator/sokol/: CMakeLists.txt
fips-files/configs/: osx-xcode-xctest.yml
tests/: CMakeLists.txt  gdg_whid65040_032-test.c
